<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tools:context="dev.filipebezerra.android.sleeptracker.sleeptracker.SleepTrackerFragment"
    >

    <data>
        <variable
            name="viewModel"
            type="dev.filipebezerra.android.sleeptracker.sleeptracker.SleepTrackerViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/sleep_night_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/normal_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/title"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/start_tracking_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sleep_night_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/clear_sleep_data_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sleep_night_title"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            bind:sleepNightList="@{viewModel.sleepNights}"
            tools:listitem="@layout/sleep_night_list_item"
            />

        <Button
            android:id="@+id/start_tracking_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/start"
            android:onClick="@{() -> viewModel.onStartTracking()}"
            android:enabled="@{!viewModel.isCurrentlyTrackingSleep()}"
            android:contentDescription="@string/start_tracking_your_night_sleep"
            app:layout_constraintBaseline_toBaselineOf="@id/stop_tracking_button"
            app:layout_constraintEnd_toStartOf="@+id/stop_tracking_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/stop_tracking_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/stop"
            android:onClick="@{() -> viewModel.onStopTracking()}"
            android:enabled="@{viewModel.isCurrentlyTrackingSleep()}"
            android:contentDescription="@string/stop_tracking_your_night_sleep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_tracking_button"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/clear_sleep_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/clear"
            android:onClick="@{() -> viewModel.onClearSleepData()}"
            android:contentDescription="@string/clear_all_night_sleep_data_forever"
            bind:isGone="@{viewModel.emptySleepNights}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
