<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/sleep_tracker_fragment"
    >

    <fragment
        android:id="@+id/sleep_tracker_fragment"
        android:name="dev.filipebezerra.android.sleeptracker.sleeptracker.SleepTrackerFragment"
        android:label="@string/app_name"
        tools:layout="@layout/sleep_tracker_fragment"
        >
        <action
            android:id="@+id/action_sleepTrackerFragment_to_sleepQualityFragment"
            app:destination="@id/sleep_quality_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_in_right"
            />
        <action
            android:id="@+id/action_sleep_tracker_fragment_to_sleep_detail_fragment"
            app:destination="@id/sleep_detail_fragment"
            />
    </fragment>

    <dialog
        android:id="@+id/sleep_quality_fragment"
        android:name="dev.filipebezerra.android.sleeptracker.sleepquality.SleepQualityFragment"
        android:label="@string/sleep_quality_title"
        tools:layout="@layout/sleep_quality_fragment"
        >
        <argument
            android:name="sleepNight"
            app:argType="dev.filipebezerra.android.sleeptracker.database.SleepNight"
            />
        <action
            android:id="@+id/action_sleepQualityFragment_to_sleepTrackerFragment"
            app:destination="@id/sleep_tracker_fragment"
            app:launchSingleTop="false"
            app:popUpTo="@+id/sleep_tracker_fragment"
            app:popUpToInclusive="true"
            />
    </dialog>
    <fragment
        android:id="@+id/sleep_detail_fragment"
        android:name="dev.filipebezerra.android.sleeptracker.sleepdetail.SleepDetailFragment"
        android:label="@string/sleep_detail_title"
        tools:layout="@layout/sleep_detail_fragment"
        >
        <argument
            android:name="sleepNightId"
            app:argType="long"
            />
    </fragment>
</navigation>
