<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tools:context="dev.filipebezerra.android.sleeptracker.sleeptracker.SleepTrackerFragment"
    >

    <data>
        <variable
            name="viewModel"
            type="dev.filipebezerra.android.sleeptracker.sleeptracker.SleepTrackerViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/clear_sleep_data_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stop_tracking_button"
            >

            <TextView
                android:id="@+id/sleep_nighs_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:text="@{viewModel.sleepNightsText}"
                />
        </ScrollView>

        <Button
            android:id="@+id/start_tracking_button"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/start"
            android:onClick="@{() -> viewModel.onStartTracking()}"
            android:enabled="@{!viewModel.isCurrentlyTrackingSleep()}"
            app:layout_constraintBaseline_toBaselineOf="@id/stop_tracking_button"
            app:layout_constraintEnd_toStartOf="@+id/stop_tracking_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/stop_tracking_button"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/stop"
            android:onClick="@{() -> viewModel.onStopTracking()}"
            android:enabled="@{viewModel.isCurrentlyTrackingSleep()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_tracking_button"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/clear_sleep_data_button"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/clear"
            android:onClick="@{() -> viewModel.onClearSleepData()}"
            bind:isGone="@{viewModel.emptySleepNights}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
